# HGS-CVRP

./: Genetic.cpp  Individual.cpp  Params.cpp  Params.h  Split.cpp  Split.h
Program/: .gitignore  CMakeLists.txt  CircleSector.h  Genetic.h  Individual.h  LocalSearch.cpp  LocalSearch.h  Params.cpp  Population.cpp  Population.h  commandline.h  main.cpp
Program/solutions/: mySolution.sol  mySolution.sol.PG.csv
solutions/: mySolution.sol  mySolution.sol.PG.csv
